--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <html>
   <head>
     <title>hiii</title>
-    
+  </head>
+  
+  <body>
+    hi hi hi 
+    <h1>hi hi hi </h1>
+  </body>
+</html>
