--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-hiiiiiiiii
+<html>
+  <head>
+    <title> ice creammmmm</title>
+  </head>
+  
+  <body>
+  1+1=8
+    <h1>aramaki yoshihiko</h1>
+  </body>
+</html>
