--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   
   <body>
-  1+1=8
-    <h1>Aramaki yoshihiko</h1>
+  this is my home page
+    <h1>hiiiiiiiiiii</h1>
   </body>
 </html>
