--- a/W6HW/index.html
+++ b/W6HW/index.html
@@ -1,1 +1,1 @@
-<a href="https://actors-league.com/2022/"> <img src="baseball.jpg">
+<a href="https://actors-league.com/2022/"> <img src="baseball.jpg"></a>
