--- a/finalHW/index.html
+++ b/finalHW/index.html
@@ -1,1 +1,5 @@
 <a href="https://actors-league.com/2022/"><img src="actor.jpg"></a>
+<img src="wada.jpg">
+<a href="https://wadamasanari.com/">和田雅成</a>
+
+
