--- a/finalHW/index.html
+++ b/finalHW/index.html
@@ -1,5 +1,5 @@
 <a href="https://actors-league.com/2022/"><img src="actor.jpg"></a>
-<img src="wada.jpg">
+<img src="wada.png">
 <a href="https://wadamasanari.com/">和田雅成</a>
 
 
