--- a/W8HW/index.html
+++ b/W8HW/index.html
@@ -5,7 +5,7 @@
    <title>影音多媒體</title>
  </head>
  <body>
-   <video src="bird.ogv"controls></video>
+   <video src="1bird.ogv"controls></video>
    <audio src="sound.mp3"controls></audio> 
  </body>
 </html>
