--- a/finalHW/index.html
+++ b/finalHW/index.html
@@ -1,3 +1,7 @@
+<div class="run">
+        <marquee direction="left" scrollamount="7" behavior="alternate"><b>ACTOR LEAGUE<b>
+        </marquee>
+</div>          
 <a href="https://actors-league.com/2022/"><img src="actor.jpg"></a>
 <img src="wada.png">
 <a href="https://wadamasanari.com/">和田雅成</a>
