--- a/HW16/index.html
+++ b/HW16/index.html
@@ -2,7 +2,7 @@
 <html>
   <body>
     <title>HELLO</title>
-    h1{text-shadow:12px 8px 5px orange,gray,silver}
+   h3 {text-shadow: 0.1em 0.1em #333}
   </body>
 </html>
 
