--- a/finalHW/index.html
+++ b/finalHW/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>  
     <div class="run">
-       <h1><marquee direction="left" scrollamount="7" behavior="alternate"><b>ACTOR LEAGUE<b>
+      <h1><marquee direction="left" scrollamount="7" behavior="alternate"><b>ACTOR LEAGUE<b></h1>
         </marquee>
     </div> 
     <a href="https://actors-league.com/2021/"><img src="actor.jpg"></a>
