--- a/finalHW/index.html
+++ b/finalHW/index.html
@@ -12,9 +12,9 @@
         </marquee>
     </div> 
     <a href="https://actors-league.com/2021/"><img src="actor.jpg"></a>  
-        <h1>ACTOR LEAGUE是一個以公益為目的的活動，參賽的選手都是日本的舞台劇/音樂劇演員。  
-          這項活動從2021年開始舉辦，並且舉辦的項目年年增加，2021年初次舉辦時活動項目只有棒球。  
-          截至2023為止，比賽項目除了棒球，還新增了籃球及電競，在提供給觀眾娛樂的同時，也盡到公益的一份心力。</h1>  
+        <h1>  ACTOR LEAGUE是一個以公益為目的的活動，參賽的選手都是日本的舞台劇/音樂劇演員。  </h1>  
+        <h1>  這項活動從2021年開始舉辦，並且舉辦的項目年年增加，2021年初次舉辦時活動項目只有棒球。  </h1>  
+        <h1>  截至2023為止，比賽項目除了棒球，還新增了籃球及電競，在提供給觀眾娛樂的同時，也盡到公益的一份心力。  </h1>  
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
           <div class="carousel-item active">
