--- a/finalHW/index.html
+++ b/finalHW/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<background-color:black； color:white>
+{background-color:black； color:white}
 <html lang="en">
   <head>
     <meta charset="utf-8">
