--- a/finalHW/index.html
+++ b/finalHW/index.html
@@ -13,8 +13,8 @@
     </div> 
     <a href="https://actors-league.com/2021/"><img src="actor.jpg"></a>  
         <style>
-          h1 {background-color:lightgray; color:white}
-          p {background-color:lightslategray; color:white}
+          h1 {background-color:lightslategray; color:white}
+          p {background-color:lightgray; color:white}
           div {columns:1200px}
         </style>
         <div>
