--- a/finalHW/index.html
+++ b/finalHW/index.html
@@ -15,6 +15,8 @@
         <style>
           h1 {background-color:lightslategray; color:white}
           p {background-color:lightgray; color:white}
+          <h1 style="margin:1cm">
+          <p style="margin:1cm">
           div {columns:900px}
         </style>
         <div>
