--- a/finalHW/index.html
+++ b/finalHW/index.html
@@ -12,7 +12,7 @@
         </marquee>
     </div> 
         
-    <a href="https://actors-league.com/2021/"><img src="actor.jpg"></a>  
+    <a href="https://actors-league.com/2021/"><img src="actor.jpg"></a><br>
         
         <style>
           h1 {background-color:lightslategray; color:white}
