--- a/finalHW/index.html
+++ b/finalHW/index.html
@@ -1,4 +1,9 @@
 <!doctype html>
+<div>
+align-items: center;
+justify-content: center;
+</div>
+
 <html lang="en">
   <head>
     <meta charset="utf-8">
