--- a/finalHW/index.html
+++ b/finalHW/index.html
@@ -28,7 +28,7 @@ justify-content: center;
           <p style="margin:1cm">
           div {columns:00px}
         </style>
-        <div>
+        <div id="container">
           <h1>比賽簡介</h1>
           <p>ACTOR LEAGUE是一個以公益為目的的活動，參賽的選手都是日本的舞台劇/音樂劇演員。</p>
           <p>這項活動從2021年開始舉辦，並且舉辦的項目年年增加，2021年初次舉辦時活動項目只有棒球。</p>
