--- a/finalHW/index.html
+++ b/finalHW/index.html
@@ -11,6 +11,10 @@
       <h3><marquee direction="left" scrollamount="7" behavior="alternate"><b>ACTOR☆LEAGUE<b></h3>
         </marquee>
     </div> 
+    <div class="run">
+      <h3><marquee direction="right" scrollamount="7" behavior="alternate"><b>2021<b></h3>
+        </marquee>
+    </div> 
         
     <a href="https://actors-league.com/2021/"><img src="actor.jpg"></a><br>
         
