--- a/finalHW/index.html
+++ b/finalHW/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   </head>
   <body>  
+    div {columns:1000px}
     <div class="run">
       <h3><marquee direction="left" scrollamount="7" behavior="alternate"><b>ACTOR☆LEAGUE<b></h3>
         </marquee>
