--- a/finalHW/index.html
+++ b/finalHW/index.html
@@ -81,7 +81,9 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
 
       <h2>Diamond Bear</h2>
-<a href="https://wadamasanari.com/">和田雅成</a>
+<a href="https://wadamasanari.com/">2_和田琢磨</a>
+<a href="https://www.wadatakuma.jp/">6_和田雅成</a>
+<a href="https://takano-akira.net/">722_高野洸</a>
       </div>
         
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3239.836552588333!2d139.74931637534954!3d35.7056395725794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188c4782eed4f3%3A0x5058b288249e640e!2z5p2x5Lqs5beo6JuL!5e0!3m2!1szh-TW!2stw!4v1684118459727!5m2!1szh-TW!2stw" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
