--- a/finalHW/index.html
+++ b/finalHW/index.html
@@ -81,6 +81,19 @@
 <a href="https://wadamasanari.com/">2_和田琢磨</a>
 <a href="https://www.wadatakuma.jp/">6_和田雅成</a>
 <a href="https://takano-akira.net/">722_高野洸</a>
+<a href="https://takano-akira.net/">708_北川尚弥</a>
+<a href="https://takano-akira.net/">55_松井勇歩</a>
+<a href="https://takano-akira.net/">22_北園涼</a>
+<a href="https://takano-akira.net/">570_小南光司</a>
+<a href="https://takano-akira.net/">4_椎名鯛造</a>
+<a href="https://takano-akira.net/">845_石橋弘毅</a>
+<a href="https://takano-akira.net/">331_鳥越裕貴</a>
+<a href="https://takano-akira.net/">03_大見拓土</a>
+<a href="https://takano-akira.net/">18_結城伽寿也</a>
+<a href="https://takano-akira.net/">27_上田悠介</a>
+<a href="https://takano-akira.net/">1_上田堪大</a>
+<a href="https://takano-akira.net/">999_岩瀬恒輝</a>
+<a href="https://takano-akira.net/">8_尾上松也</a>
       </div>
         
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3239.836552588333!2d139.74931637534954!3d35.7056395725794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188c4782eed4f3%3A0x5058b288249e640e!2z5p2x5Lqs5beo6JuL!5e0!3m2!1szh-TW!2stw!4v1684118459727!5m2!1szh-TW!2stw" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
