--- a/finalHW/index.html
+++ b/finalHW/index.html
@@ -81,19 +81,19 @@
 <a href="https://wadamasanari.com/">2_和田琢磨</a>
 <a href="https://www.wadatakuma.jp/">6_和田雅成</a>
 <a href="https://takano-akira.net/">722_高野洸</a>
-<a href="https://takano-akira.net/">708_北川尚弥</a>
-<a href="https://takano-akira.net/">55_松井勇歩</a>
-<a href="https://takano-akira.net/">22_北園涼</a>
-<a href="https://takano-akira.net/">570_小南光司</a>
-<a href="https://takano-akira.net/">4_椎名鯛造</a>
-<a href="https://takano-akira.net/">845_石橋弘毅</a>
-<a href="https://takano-akira.net/">331_鳥越裕貴</a>
-<a href="https://takano-akira.net/">03_大見拓土</a>
-<a href="https://takano-akira.net/">18_結城伽寿也</a>
-<a href="https://takano-akira.net/">27_上田悠介</a>
-<a href="https://takano-akira.net/">1_上田堪大</a>
-<a href="https://takano-akira.net/">999_岩瀬恒輝</a>
-<a href="https://takano-akira.net/">8_尾上松也</a>
+<a href="https://irving.co.jp/talents/naoya-kitagawa/">708_北川尚弥</a>
+<a href="https://www.watanabepro.co.jp/mypage/90000009/">55_松井勇歩</a>
+<a href="https://www.rmp.tokyo/profile">22_北園涼</a>
+<a href="https://fanicon.net/fancommunities/2243">570_小南光司</a>
+<a href="https://twitter.com/taizoshiina/">4_椎名鯛造</a>
+<a href="https://voyz-entmt.com/">845_石橋弘毅</a>
+<a href="https://torigoeyuki.com/">331_鳥越裕貴</a>
+<a href="http://atom-ent.com/talents/omi_takuto/">03_大見拓土</a>
+<a href="https://bam-boo.biz/actors.php?id=24">18_結城伽寿也</a>
+<a href="http://twintail-inc.com/ueda-yusuke/">27_上田悠介</a>
+<a href="https://www.horipro.co.jp/uedakandai/">1_上田堪大</a>
+<a href="https://www.sunmusic-gp.co.jp/talent/iwase_kouki/">999_岩瀬恒輝</a>
+<a href="https://onoematsuya.jp/">8_尾上松也</a>
         <h2>Black Wings</h2>
       </div>
         
