--- a/finalHW/index.html
+++ b/finalHW/index.html
@@ -84,7 +84,13 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
 
-      <h2>Diamond Bears</h2>
+       <style>
+          h2 {background-color:lightyellow; color:white}
+        </style>
+         <div>
+          <h2>Diamond Bears</h2>
+         </div>
+      
 <a href="https://wadamasanari.com/">2_和田琢磨</a>
 <a href="https://www.wadatakuma.jp/">6_和田雅成</a>
 <a href="https://takano-akira.net/">722_高野洸</a>
