--- a/finalHW/index.html
+++ b/finalHW/index.html
@@ -107,6 +107,24 @@
         <h3>....</h3>
         
         <h2>Black Wings</h2>
+        <h3>....</h3>
+<a href="https://wadamasanari.com/">19_和田琢磨</a>
+<a href="https://shohei.club/profiles">55_章平</a>
+<a href="https://kuroba-mario.com/">968_黒羽麻璃央</a>
+<a href="https://s-arisawa.com/profiles">10_有澤樟太郎</a>
+<a href="https://www.alanabe.com/">51_阿部顕嵐</a>
+<a href="https://sasamori-hiroki.net/">33_笹森裕貴</a>
+<a href="https://www.watanabepro.co.jp/mypage/90000019/">1_近藤頌利</a>
+<a href="https://www.ruby-parade.com/artist/nishikawa-shunsuke/">11_西川俊介</a>
+<a href="https://www.cubeinc.co.jp/archives/artist/isakaikumi">193_井阪郁巳</a>
+<a href="https://okamiyakurumu.com/">966_岡宮来夢</a>
+<a href="https://horipro-digital-entertainment.jp/talent/%E5%B0%8F%E8%A5%BF%E8%A9%A0%E6%96%97/">88_小西詠斗</a>
+<a href="http://timely-office.com/hirono-ryota/">777_廣野凌大</a>
+<a href="https://cast-may.com/contents/cast_25.php">9_松田凌</a>
+<a href="https://www.sunmusic-brain.jp/talent/%e5%b9%b3%e9%87%8e%e5%ae%8f%e5%91%a8/">0_平野宏周</a>
+<a href="https://ryousei-tanaka.com/">24_田中涼星</a>
+<a href="https://hashimoto-shohei.com/profile/">7_橋本祥平</a>
+<a href="https://www.ldh.co.jp/chh/management/yagi/">16_八木将康</a>
       </div>
         
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3239.836552588333!2d139.74931637534954!3d35.7056395725794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188c4782eed4f3%3A0x5058b288249e640e!2z5p2x5Lqs5beo6JuL!5e0!3m2!1szh-TW!2stw!4v1684118459727!5m2!1szh-TW!2stw" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
