--- a/finalHW/index.html
+++ b/finalHW/index.html
@@ -32,9 +32,9 @@
         </style>
         <div>
           <h1>比賽簡介</h1>
-          <p>ACTOR LEAGUE是一個以公益為目的的活動，參賽的選手都是日本的舞台劇/音樂劇演員。</p>
-          <p>這項活動從2021年開始舉辦，並且舉辦的項目年年增加，2021年初次舉辦時活動項目只有棒球。</p>
-        <p>截至2023為止，比賽項目除了棒球，還新增了籃球及電競，在提供給觀眾娛樂的同時，也盡到公益的一份心力。</p>
+          <p>ACTOR LEAGUE是一個以公益為目的的活動，參賽的選手都是日本的舞台劇/音樂劇演員。
+          這項活動從2021年開始舉辦，並且舉辦的項目年年增加，2021年初次舉辦時活動項目只有棒球。
+       截至2023為止，比賽項目除了棒球，還新增了籃球及電競，在提供給觀眾娛樂的同時，也盡到公益的一份心力。</p>
         </div>   
     
         
@@ -130,7 +130,8 @@
   <h3>....</h3>
   <h1>比賽場地</h1>      
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3239.836552588333!2d139.74931637534954!3d35.7056395725794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188c4782eed4f3%3A0x5058b288249e640e!2z5p2x5Lqs5beo6JuL!5e0!3m2!1szh-TW!2stw!4v1684118459727!5m2!1szh-TW!2stw" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </body>
+  東京巨蛋，是一所可作為包含棒球場在內的諸多體育賽事、以及演唱會及特殊活動舉辦場地的建築，被視為是東京的地標。職業棒球讀賣巨人的主場，每年有800萬以上的觀眾到場，是日本的代表設施。1988年開放，利用空氣的壓力差支撐著膜結構屋頂，是日本首例空氣支撐結構屋頂。不僅日本國內，還有很多國際級藝人每年在這裡舉辦演出，是一座可以容納55000人的日本頂級體育場。    
+        </body>
   
 
 
